--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -56,9 +56,12 @@
 
     </div>
     
-
-
-
+  <!-- Footer -->
+  <footer class="bg-light text-center text-lg-start mt-5">
+    <div class="text-center p-3">
+      &copy; 2025 Aquamovil. Todos los derechos reservados.
+    </div>
+  </footer>
 
 
 </body>
