--- a/Frontend/servicios.html
+++ b/Frontend/servicios.html
@@ -115,7 +115,16 @@
         <span class="visually-hidden">Siguiente</span>
       </button>
     </div>
+
   </div>
+
+    <!-- Footer -->
+  <footer class="bg-light text-center text-lg-start mt-5">
+    <div class="text-center p-3">
+      &copy; 2025 Aquamovil. Todos los derechos reservados.
+    </div>
+  </footer>
+  
 </body>
 
 </html>
