para mejor organización, unifiqué carpetas frontend/assets y frontend/img ya que ambas contenian imágenes y las guardé en frontend/assets/img

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -52,7 +52,7 @@
     </div>
         
     <div>
-        <img src="assets/image1.png" alt="logotipo Aquamovil">
+        <img src="assets\img\logotipo.png" alt="logotipo Aquamovil">
 
     </div>
     
