--- a/Frontend/servicios.html
+++ b/Frontend/servicios.html
@@ -50,7 +50,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card">
-                <img class="card-img-top" src="img/lavado-exterior.jpg" alt="Lavado Exterior">
+                <img class="card-img-top" src="assets/img/lavado-exterior.jpg" alt="Lavado Exterior">
                 <div class="card-body text-center">
                   <h5 class="card-title">Lavado Exterior</h5>
                 </div>
@@ -58,7 +58,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img class="card-img-top" src="img/lavado-interior.jpg" alt="Lavado Interior">
+                <img class="card-img-top" src="assets/img/lavado-interior.jpg" alt="Lavado Interior">
                 <div class="card-body text-center">
                   <h5 class="card-title">Lavado Interior</h5>
                 </div>
@@ -66,7 +66,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img class="card-img-top" src="img/pulido.jpg" alt="Pulido Básico">
+                <img class="card-img-top" src="assets/img/pulido.jpg" alt="Pulido Básico">
                 <div class="card-body text-center">
                   <h5 class="card-title">Pulido Básico</h5>
                 </div>
@@ -79,7 +79,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card">
-                <img class="card-img-top" src="img/tratamiento-llantas.jpg" alt="Tratamiento de llantas">
+                <img class="card-img-top" src="assets/img/tratamiento-llantas.jpg" alt="Tratamiento de llantas">
                 <div class="card-body text-center">
                   <h5 class="card-title">Tratamiento de llantas</h5>
                 </div>
@@ -87,7 +87,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img class="card-img-top" src="img/encerado.jpg" alt="Encerado">
+                <img class="card-img-top" src="assets/img/encerado.jpg" alt="Encerado">
                 <div class="card-body text-center">
                   <h5 class="card-title">Encerado</h5>
                 </div>
@@ -95,7 +95,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img class="card-img-top" src="img/aspirado-interior.jpg" alt="Aspirado Interior">
+                <img class="card-img-top" src="assets/img/aspirado-interior.jpg" alt="Aspirado Interior">
                 <div class="card-body text-center">
                   <h5 class="card-title">Aspirado Interior</h5>
                 </div>
@@ -124,7 +124,7 @@
       &copy; 2025 Aquamovil. Todos los derechos reservados.
     </div>
   </footer>
-  
+
 </body>
 
 </html>
