--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,58 +1,80 @@
-<meta charset="UTF-8">
+<!DOCTYPE html>
+<html lang="es">
+
+  <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aquamovil</title>
     <link rel="icon" href="assets\img\Favicon.png" type="image/png">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
 
-      <!-- Navbar -->
+  <body>
+
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary py-4">
+
       <div class="container-fluid">
+
         <a class="navbar-brand" href="#">AQUAMOVIL</a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
           aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="servicios.html">Servicios</a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
             </li>
+
           </ul>
+
         </div>
+
       </div>
+
     </nav>
     
     <main>
 
-        <section class="topSection">
+      <section class="topSection">
 
-            <h1 class="titleTopSection">¡Bienvenidos a Aquamovil!</h1>
-            <h2 class="sloganTopSection">Un spa para tu auto</h2>
+        <h1 class="titleTopSection">¡Bienvenidos a Aquamovil!</h1>
+        <h2 class="sloganTopSection">Un spa para tu auto</h2>
 
-        </section>
+      </section>
 
-        <section class="heroSection">
+      <section class="heroSection">
 
-            <img src="assets/img/Favicon.png" alt="logotipo Aquamovil">
+        <img src="assets/img/Favicon.png" alt="logotipo Aquamovil">
 
-        </section>
+      </section>
 
     </main>
 
     <!-- Footer -->
     <footer class="bg-light text-center text-lg-start mt-5">
-        <div class="text-center p-3">
+      <div class="text-center p-3">
         &copy; 2025 Aquamovil. Todos los derechos reservados.
-        </div>
+      </div>
     </footer>
 
-</body>
+  </body>
+
+</html>
