--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aquamovil</title>
-    <link rel="icon" href="assets\img\Favicon.png" type="image/png">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./Frontend/assets/img/Favicon.png" type="image/png">
+    <link rel="stylesheet" href="./Frontend/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -32,15 +32,15 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="servicios.html">Servicios</a>
+              <a class="nav-link active" aria-current="page" href="./Frontend/servicios.html">Servicios</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+              <a class="nav-link active" aria-current="page" href="./Frontend/contacto.html">Contacto</a>
             </li>
 
           </ul>
@@ -62,7 +62,7 @@
 
       <section class="heroSection">
 
-        <img src="assets/img/Favicon.png" alt="logotipo Aquamovil">
+        <img src="./Frontend/assets/img/Favicon.png" alt="logotipo Aquamovil">
 
       </section>
 
