feat(servicios): agrega descripciones a los servicios en servicios.html

--- a/Frontend/servicios.html
+++ b/Frontend/servicios.html
@@ -70,6 +70,7 @@
                     <img class="card-img-top" src="assets/img/lavado-exterior.jpg" alt="Lavado Exterior">
                     <div class="card-body text-center">
                       <h5 class="card-title">Lavado Exterior</h5>
+                      <p>El lavado exterior elimina la suciedad, el polvo y los residuos del entorno, devolviendo al vehículo su brillo original. Utilizamos productos de alta calidad y técnicas cuidadosas para proteger la pintura y dejar la carrocería impecable.</p>
                     </div>
                   </div>
                 </div>
@@ -78,6 +79,7 @@
                     <img class="card-img-top" src="assets/img/lavado-interior.jpg" alt="Lavado Interior">
                     <div class="card-body text-center">
                       <h5 class="card-title">Lavado Interior</h5>
+                      <p>Este servicio se centra en la limpieza profunda del interior del vehículo: tablero, paneles, tapizados y superficies plásticas. Garantiza un ambiente fresco, ordenado y libre de polvo, ideal para disfrutar de cada viaje.</p>
                     </div>
                   </div>
                 </div>
@@ -86,6 +88,7 @@
                     <img class="card-img-top" src="assets/img/pulido.jpg" alt="Pulido Básico">
                     <div class="card-body text-center">
                       <h5 class="card-title">Pulido Básico</h5>
+                      <p>El pulido básico corrige pequeñas imperfecciones y marcas superficiales en la pintura. Realza el color y el brillo del vehículo, dejando una terminación más uniforme y profesional.</p>
                     </div>
                   </div>
                 </div>
@@ -99,6 +102,7 @@
                     <img class="card-img-top" src="assets/img/tratamiento-llantas.jpg" alt="Tratamiento de llantas">
                     <div class="card-body text-center">
                       <h5 class="card-title">Tratamiento de llantas</h5>
+                      <p>El tratamiento de llantas remueve la grasa, el barro y los residuos acumulados, restaurando el color y el brillo original. Además, se aplica un producto protector que prolonga su aspecto y evita el deterioro prematuro.</p>
                     </div>
                   </div>
                 </div>
@@ -107,6 +111,7 @@
                     <img class="card-img-top" src="assets/img/encerado.jpg" alt="Encerado">
                     <div class="card-body text-center">
                       <h5 class="card-title">Encerado</h5>
+                      <p>El encerado protege la pintura del auto frente al sol, la lluvia y la contaminación. Aporta un acabado brillante y sedoso, manteniendo el vehículo con apariencia de nuevo por más tiempo.</p>
                     </div>
                   </div>
                 </div>
@@ -115,6 +120,7 @@
                     <img class="card-img-top" src="assets/img/aspirado-interior.jpg" alt="Aspirado Interior">
                     <div class="card-body text-center">
                       <h5 class="card-title">Aspirado Interior</h5>
+                      <p>El aspirado interior elimina polvo, arena, migas y restos de suciedad del suelo, asientos y alfombras. Es ideal para mantener el vehículo limpio y cuidar los tejidos y materiales interiores.</p>
                     </div>
                   </div>
                 </div>
