--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -37,7 +37,6 @@
                         <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <!-- Botón de registro/login a la derecha -->
                 <div class="d-flex">
                     <a href="registro.html" class="btn btn-outline-primary me-2">Registrarse</a>
                     <a href="login.html" class="btn btn-primary">Iniciar sesión</a>
@@ -48,18 +47,23 @@
 
     <!-- Main -->
     <main>
-        <section class="topSection">
-            <h1 class="titleTopSection">¡Bienvenido!</h1>
-            <h2 class="sloganTopSection">Ingresa tus datos para continuar</h2>
-        </section>
+
 
         <section class="heroSection">
             <form class="login-container" id="loginForm" novalidate>
-                <input type="email" id="email" name="email" placeholder="Correo electrónico" required>
+            <center><h2 class="titleTopSection">Iniciar sesión</h2></center>
+                
+                <div class="mb-3">
+                <label for="email" class="form-label">Correo electrónico</label>
+                <input type="email" id="email" name="email" placeholder="Ej: juanperez@email.com"  required>
                 <span class="error" id="emailError"></span>
+                </div>
 
-                <input type="password" id="password" name="password" placeholder="Contraseña" required minlength="6" maxlength="20">
+                <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" id="password" name="password" placeholder="*********" required minlength="6" maxlength="20">
                 <span class="error" id="passwordError"></span>
+                </div>
 
                 <button type="submit">Iniciar sesión</button>
                 <span id="message" class="error"></span>
@@ -91,7 +95,7 @@
                 mesaggeElement.textContent = 'Login exitoso!';
                 mesaggeElement.style.color = 'green';
 
-                window.location.href = 'index.html';
+                window.location.href = '/index.html';
             }
             else {
                 mesaggeElement.textContent = 'Usuario o contraseña incorrectos.';
