--- a/Frontend/servicios.html
+++ b/Frontend/servicios.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios - AQUAMOVIL</title>
-    <link rel="icon" href="/Frontend/img/Favicon.png" type="image/png">
+    <link rel="icon" href="assets/img/Favicon.png" type="image/png">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -44,8 +44,11 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
             </li>
-
           </ul>
+          <div class="d-flex">
+              <a href="/Frontend/registro.html" class="btn btn-outline-primary me-2">Registrarse</a>
+              <a href="/Frontend/login.html" class="btn btn-primary">Iniciar sesión</a>
+          </div>
 
         </div>
 
