--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
             </li>
 
             <li class="nav-item">
@@ -42,8 +42,11 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./Frontend/contacto.html">Contacto</a>
             </li>
-
           </ul>
+          <div class="d-flex">
+                    <a href="./Frontend/registro.html" class="btn btn-outline-primary me-2">Registrarse</a>
+                    <a href="./Frontend/login.html" class="btn btn-primary">Iniciar sesión</a>
+                </div>
 
         </div>
 
