--- a/Frontend/contacto.html
+++ b/Frontend/contacto.html
@@ -1,78 +1,130 @@
 <!DOCTYPE html>
+
 <html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contáctanos - Aquamovil</title>
-    <link rel="icon" href="assets/img/Favicon.png" type="image/png">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  </head>
 
-  <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary py-4">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">AQUAMOVIL</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="servicios.html">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
-            </li>
-          </ul>
-          <div class="d-flex">
-                    <a href="registro.html" class="btn btn-outline-primary me-2">Registrarse</a>
-                    <a href="login.html" class="btn btn-primary">Iniciar sesión</a>
-                </div>
-        </div>
+<head>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contáctanos - Aquamovil</title>
+  <link rel="icon" href="assets/img/Favicon.png" type="image/png">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary py-4">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">AQUAMOVIL</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="servicios.html">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <main>
-      <!-- Formulario de contacto -->
+  <main>
 
-        
-        <form action="https://formsubmit.co/ammaia.developers@gmail.com" method="POST" class="login-container">
-          <div class="mb-3">
-          <center><h2 class="mb-4 titleTopSection">Contáctanos</h2></center>
-            <label for="nombre" class="form-label">Nombre y apellido</label>
-            <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ej: Juan Pérez" required>
-          </div>
-          <div class="mb-3">
-            <label for="email" class="form-label">Correo electrónico</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Ej: juanperez@email.com" required>
-          </div>
-          <div class="mb-3">
-            <label for="mensaje" class="form-label">Mensaje</label>
-            <textarea class="form-control" id="mensaje" name="mensaje" rows="4" placeholder="Escribe tu consulta aquí..." required></textarea>
-          </div>
-          <!-- Campos ocultos para personalizar FormSubmit -->
-          <input type="hidden" name="_subject" value="Nuevo mensaje de contacto - Aquamovil">
-          <input type="hidden" name="_template" value="table">
-          <input type="hidden" name="_next" value="https://aquamovil.com/">
-          <button type="submit" class="btn btn-primary">Enviar</button>
+    <!-- Formulario de contacto -->
+    <div class="container mt-5">
+      <h2 class="mb-4 titleTopSection">Contáctanos</h2>
+      <form action="/enviar-consulta" method="POST" id="form-contacto">
+        <div class="mb-3">
+          <label for="nombre" class="form-label">Nombre y apellido</label>
+          <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ej: Juan Pérez" required>
+        </div>
+
+        <div class="mb-3">
+          <label for="email" class="form-label">Correo electrónico</label>
+          <input type="email" class="form-control" id="email" name="email" placeholder="Ej: juanperez@email.com"
+            required>
+        </div>
+        <div class="mb-3">
+          <label for="mensaje" class="form-label">Mensaje</label>
+          <textarea class="form-control" id="mensaje" name="mensaje" rows="4" placeholder="Escribe tu consulta aquí..."
+            required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
 
-    </main>
+        <p id="errores" style="color: red;"></p>
 
-    <!-- Footer -->
-    <footer class="bg-light text-center text-lg-start mt-5">
-      <div class="text-center p-3">
-        &copy; 2025 Aquamovil. Todos los derechos reservados.
-      </div>
-    </footer>
-  </body>
+    </div>
+
+  </main>
+
+
+
+  <!-- Footer -->
+  <footer class="bg-light text-center text-lg-start mt-5">
+
+    <div class="text-center p-3">
+      &copy; 2025 Aquamovil. Todos los derechos reservados.
+    </div>
+
+  </footer>
+
+  <!-- validacion del formulario con JS -->
+
+
+  <script>
+    document.getElementById("form-contacto").addEventListener("submit", function (e) {
+      e.preventDefault();
+
+
+      const nombre = document.getElementById("nombre").value;
+      const email = document.getElementById("email").value.trim();
+      const mensaje = document.getElementById("mensaje").value;
+
+
+      const errores = document.getElementById("errores");
+
+      errores.innerHTML = "";
+
+
+      if (nombre.length < 3 || nombre.lenght >25) {
+        errores.textContent = "El nombre y apellido debe contener al menos 3 caracteres y máximo 25.";
+        return;
+      }
+
+      const regexCorreo = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+      if (!regexCorreo.test(email)) {
+        errores.textContent = "El email no tiene un formato válido.";
+        return;
+      }
+
+      if (mensaje.length < 3 || mensaje.lenght >1200) {
+        errores.textContent = "El mensaje debe contener mínimo 3 caracteres y máximo 1200 caracteres";
+        return;
+      }
+
+
+    });
+  </script>
+
+
+</body>
+
 </html>
