style(ui): mejora el estilo visual de botones, hover y espaciado

--- a/Frontend/quienes_somos.html
+++ b/Frontend/quienes_somos.html
@@ -50,6 +50,7 @@
             </div>
         </div>
     </nav>
+<main>
 
     <H3 class="titleTopSection">Quiénes somos</h3>
 
@@ -108,7 +109,14 @@
 
     </div>
 
+    </main>
 
+<!-- Footer -->
+    <footer class="text-center text-lg-start mt-5">
+      <div class="text-center p-3">
+        &copy; 2025 Aquamovil. Todos los derechos reservados.
+      </div>
+    </footer>
 
 </body>
 
