--- a/Frontend/servicios.html
+++ b/Frontend/servicios.html
@@ -160,7 +160,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-light text-center text-lg-start mt-5">
+  <footer class="text-center text-lg-start mt-5">
 
     <div class="text-center p-3">
       &copy; 2025 Aquamovil. Todos los derechos reservados.
