--- a/Frontend/quienes_somos.html
+++ b/Frontend/quienes_somos.html
@@ -50,72 +50,80 @@
             </div>
         </div>
     </nav>
-<main>
+    <main>
+        <br> </br>
+        <center>
+            <H3 class="titleTopSection">Quiénes somos</h3>
+        </center>
 
-    <H3 class="titleTopSection">Quiénes somos</h3>
+        <div class="caja-celeste">
+            <h5>Sobre nosotros: </h5>
+            <p>En AquaMóvil ofrecemos un servicio innovador de lavado de autos a domicilio,
+                combinando tecnología,
+                comodidad y
+                cuidado ambiental. Nuestro objetivo es que tu vehículo luzca impecable sin que tengas que moverte de tu
+                casa
+                o trabajo.</p>
 
-    <div class="text-box">
-        <p>En AquaMóvil ofrecemos un servicio innovador de lavado de autos a domicilio, combinando tecnología, comodidad
-            y
-            cuidado ambiental. Nuestro objetivo es que tu vehículo luzca impecable sin que tengas que moverte de tu casa
-            o
-            trabajo.</p>
+            <p>
+                Somos un equipo comprometido con la excelencia, la puntualidad y la satisfacción de cada cliente. En
+                AquaMóvil,
+                transformamos el lavado tradicional en una experiencia práctica, moderna y sustentable.</p>
 
-        <p>
-            Somos un equipo comprometido con la excelencia, la puntualidad y la satisfacción de cada cliente. En
-            AquaMóvil,
-            transformamos el lavado tradicional en una experiencia práctica, moderna y sustentable.</p>
+            <p>
+            <h5>Historia</h5>
 
-        <p>
-        <h5>Historia</h5>
-
-        AquaMóvil nació con una idea simple: llevar el lavado hasta donde estés. Inspirados en la necesidad de
-        optimizar el tiempo y mejorar la calidad del servicio, comenzamos como un pequeño proyecto académico y hoy
-        crecemos como una solución digital integral que conecta clientes, operadores y administradores desde una
-        misma plataforma.
-        </p>
-    </div>
-
-    <div class="text-box">
-        <p>
+            AquaMóvil nació con una idea simple: llevar el lavado hasta donde estés. Inspirados en la necesidad de
+            optimizar el tiempo y mejorar la calidad del servicio, comenzamos como un pequeño proyecto académico y hoy
+            crecemos como una solución digital integral que conecta clientes, operadores y administradores desde una
+            misma plataforma.
+            </p>
 
 
-        <p>
-        <h5>Misión:</h5> Facilitar el cuidado del automóvil mediante servicios a domicilio de alta calidad, confiables y
-        sostenibles.</p>
+            <h5>
+                Misión:
+            </h5>
+            Facilitar el cuidado del automóvil mediante servicios a domicilio de alta calidad, confiables y
+            sostenibles.</p>
 
-        <p>
-        <h5>Visión:</h5> Ser la empresa líder en Latinoamérica en servicios móviles de lavado automotor, impulsando la
-        innovación y el respeto ambiental.</p>
+            <p>
+            <h5>Visión:</h5> Ser la empresa líder en Latinoamérica en servicios móviles de lavado automotor, impulsando
+            la
+            innovación y el respeto ambiental.</p>
 
-        <p>
-        <h5>Valores:</h5>
-        
-        <ul><li>Compromiso con la satisfacción del cliente.</li>
+            <p>
+            <h5>Valores:</h5>
 
-        <li>Responsabilidad ecológica.</li>
+            <ul>
+                <li>Compromiso con la satisfacción del cliente.</li>
 
-        <li>Puntualidad y profesionalismo.</li>
+                <li>Responsabilidad ecológica.</li>
 
-        <li>Innovación constante.</li>
+                <li>Puntualidad y profesionalismo.</li>
 
-        <li>Trabajo en equipo.</ul></p></li>
+                <li>Innovación constante.</li>
 
-        <p><h5>Equipo:</h5>
+                <li>Trabajo en equipo.</li>
+            </ul>
+            </p>
 
-        Contamos con un equipo multidisciplinario de profesionales y técnicos apasionados por la tecnología, la atención
-        al cliente y la sustentabilidad. Cada integrante de AquaMóvil aporta su conocimiento para que cada servicio sea
-        eficiente, seguro y de calidad.</p>
+            <p>
+            <h5>Equipo:</h5>
 
-    </div>
+            Contamos con un equipo multidisciplinario de profesionales y técnicos apasionados por la tecnología, la
+            atención
+            al cliente y la sustentabilidad. Cada integrante de AquaMóvil aporta su conocimiento para que cada servicio
+            sea
+            eficiente, seguro y de calidad.</p>
+        </div>
 
     </main>
 
-<!-- Footer -->
+    <!-- Footer -->
     <footer class="text-center text-lg-start mt-5">
-      <div class="text-center p-3">
-        &copy; 2025 Aquamovil. Todos los derechos reservados.
-      </div>
+        <div class="text-center p-3">
+            &copy; 2025 Aquamovil. Todos los derechos reservados.
+        </div>
     </footer>
 
 </body>
