--- a/Frontend/registro.html
+++ b/Frontend/registro.html
@@ -60,6 +60,7 @@
             <div class="mb-3">
                 <center>
                     <h2 class="titleTopSection">Registro</h2>
+                    
                 </center>
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ej: Juan Pérez" required>
@@ -76,7 +77,7 @@
 
             <button type="submit" class="btn btn-primary">Registrar</button>
         </form>
-        <p id="errores" style="color: red;"></p>
+        <center><p id="errores" style="color: red;"></p></center>
 
 
     </main>
