--- a/Frontend/registro.html
+++ b/Frontend/registro.html
@@ -58,10 +58,7 @@
 
         <form action="/enviar-registro" method="POST" id="form-registro" class="login-container">
             <div class="mb-3">
-                <center>
-                    <h2 class="titleTopSection">Registro</h2>
-                    
-                </center>
+                <h2 class="titleTopSection text-center">Registro</h2>
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ej: Juan Pérez" required>
             </div>
@@ -77,7 +74,7 @@
 
             <button type="submit" class="btn btn-primary">Registrar</button>
         </form>
-        <center><p id="errores" style="color: red;"></p></center>
+       <p id="errores" class="text-center" style="color: red;"></p>
 
 
     </main>
