--- a/Frontend/registro.html
+++ b/Frontend/registro.html
@@ -60,8 +60,8 @@
             <div class="mb-3">
                 <center>
                     <h2 class="titleTopSection">Registro</h2>
-                    
                 </center>
+
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ej: Juan Pérez" required>
             </div>
@@ -76,8 +76,8 @@
             </div>
 
             <button type="submit" class="btn btn-primary">Registrar</button>
+            <p id="errores" style="color: red;"></p>
         </form>
-        <center><p id="errores" style="color: red;"></p></center>
 
 
     </main>
