fix(quienes_somos): corrige etiquetas mal anidadas y elimina <center> obsoleta
Se corrigió el código del archivo quienes_somos.html tras validarlo con validator.w3.org.
Se ajustó la estructura de las etiquetas <p> que estaban mal cerradas y se eliminó la etiqueta <center>, reemplazándola por una solución con CSS conforme a los estándares HTML5.

--- a/Frontend/quienes_somos.html
+++ b/Frontend/quienes_somos.html
@@ -51,49 +51,34 @@
         </div>
     </nav>
     <main>
-        <br> </br>
-        <center>
-            <H3 class="titleTopSection">Quiénes somos</h3>
-        </center>
+        <br>
+        <h3 class="titleTopSection text-center">Quiénes somos</h3>
 
         <div class="caja-celeste">
             <h5>Sobre nosotros: </h5>
             <p>En AquaMóvil ofrecemos un servicio innovador de lavado de autos a domicilio,
-                combinando tecnología,
-                comodidad y
-                cuidado ambiental. Nuestro objetivo es que tu vehículo luzca impecable sin que tengas que moverte de tu
-                casa
-                o trabajo.</p>
-
+                combinando tecnología, comodidad y cuidado ambiental. Nuestro objetivo es que tu vehículo luzca impecable sin que tengas que moverte de tu casa o trabajo.</p>
             <p>
-                Somos un equipo comprometido con la excelencia, la puntualidad y la satisfacción de cada cliente. En
-                AquaMóvil,
-                transformamos el lavado tradicional en una experiencia práctica, moderna y sustentable.</p>
+                Somos un equipo comprometido con la excelencia, la puntualidad y la satisfacción de cada cliente. En AquaMóvil, transformamos el lavado tradicional en una experiencia práctica, moderna y sustentable.</p>
 
-            <p>
-            <h5>Historia</h5>
-
-            AquaMóvil nació con una idea simple: llevar el lavado hasta donde estés. Inspirados en la necesidad de
+        
+            <h5>Historia:</h5>
+            <p>AquaMóvil nació con una idea simple: llevar el lavado hasta donde estés. Inspirados en la necesidad de
             optimizar el tiempo y mejorar la calidad del servicio, comenzamos como un pequeño proyecto académico y hoy
             crecemos como una solución digital integral que conecta clientes, operadores y administradores desde una
             misma plataforma.
             </p>
 
 
-            <h5>
-                Misión:
-            </h5>
-            Facilitar el cuidado del automóvil mediante servicios a domicilio de alta calidad, confiables y
+            <h5>Misión:</h5>
+            <p>Facilitar el cuidado del automóvil mediante servicios a domicilio de alta calidad, confiables y
             sostenibles.</p>
 
-            <p>
-            <h5>Visión:</h5> Ser la empresa líder en Latinoamérica en servicios móviles de lavado automotor, impulsando
-            la
-            innovación y el respeto ambiental.</p>
+            <h5>Visión:</h5> 
+            <p>Ser la empresa líder en Latinoamérica en servicios móviles de lavado automotor, impulsando
+            la innovación y el respeto ambiental.</p>
 
-            <p>
             <h5>Valores:</h5>
-
             <ul>
                 <li>Compromiso con la satisfacción del cliente.</li>
 
@@ -105,16 +90,12 @@
 
                 <li>Trabajo en equipo.</li>
             </ul>
-            </p>
 
-            <p>
             <h5>Equipo:</h5>
 
-            Contamos con un equipo multidisciplinario de profesionales y técnicos apasionados por la tecnología, la
-            atención
-            al cliente y la sustentabilidad. Cada integrante de AquaMóvil aporta su conocimiento para que cada servicio
-            sea
-            eficiente, seguro y de calidad.</p>
+            <p>Contamos con un equipo multidisciplinario de profesionales y técnicos apasionados por la tecnología, la
+            atención al cliente y la sustentabilidad. Cada integrante de AquaMóvil aporta su conocimiento para que cada servicio
+            sea eficiente, seguro y de calidad.</p>
         </div>
 
     </main>
