--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -54,9 +54,7 @@
 
         <section class="heroSection">
             <form class="login-container" id="loginForm" novalidate>
-                <center>
-                    <h2 class="titleTopSection">Iniciar sesión</h2>
-                </center>
+                <h2 class="titleTopSection text-center">Iniciar sesión</h2>
 
                 <div class="mb-3">
                     <label for="email" class="form-label">Correo electrónico</label>
